# dbus-secret-service-keyring-store

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: example.rs
src/: cred.rs  errors.rs  lib.rs  service.rs  store.rs
