[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "DBus Secret Service credential store for keyring"
homepage = "https://github.com/open-source-cooperative/keyring-rs/wiki/Keyring"
keywords = ["dbus", "secret-service", "credential-store", "keyring"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-source-cooperative/dbus-secret-service-keyring-store.git"
rust-version = "1.85"
exclude = [".github/"]
readme = "README.md"
name = "dbus-secret-service-keyring-store"
version = "0.1.0"
edition = "2024"

[[example]]
name = "example"

[dependencies]
dbus-secret-service = { version = "4.1" }
keyring-core = "0.5"

[dev-dependencies]
fastrand = "2.3.0"
